--- a/pre/public/index.html
+++ b/pre/public/index.html
@@ -25,5 +25,6 @@
 <script src="app/app.js"></script>
 <script src="app/books/BooksController.js"></script>
 <script src="app/services/dataService.js"></script>
+<script src="app/services/loggerService.js"></script>
 </body>
 </html>
