--- a/pre/public/index.html
+++ b/pre/public/index.html
@@ -26,5 +26,6 @@
 <script src="app/books/BooksController.js"></script>
 <script src="app/services/dataService.js"></script>
 <script src="app/services/loggerService.js"></script>
+<script src="app/services/constantService.js"></script>
 </body>
 </html>
