--- a/pre/public/index.html
+++ b/pre/public/index.html
@@ -13,10 +13,15 @@
     <h1>Hello {{ books.appName }}!</h1>
 
     <h3>All Books</h3>
-
     <div>
         <ul>
             <li ng-repeat="book in books.allBooks">{{book.title}} - {{book.author}}</li>
+        </ul>
+    </div>
+    <h3>All Readers</h3>
+    <div>
+        <ul>
+            <li ng-repeat="reader in books.allReaders">{{reader.name}} - {{books.getBadge(reader.totalMinutesRead)}}</li>
         </ul>
     </div>
 </div>
@@ -27,5 +32,6 @@
 <script src="app/services/dataService.js"></script>
 <script src="app/services/loggerService.js"></script>
 <script src="app/services/constantService.js"></script>
+<script src="app/services/badgeService.js"></script>
 </body>
 </html>
