--- a/pre/public/index.html
+++ b/pre/public/index.html
@@ -26,12 +26,16 @@
     </div>
 </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.js"></script>
+
+<script src="/public/assets/js/bundle.js"></script>
+<!--
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.js"></script>
 <script src="app/app.js"></script>
 <script src="app/books/BooksController.js"></script>
 <script src="app/services/dataService.js"></script>
 <script src="app/services/loggerService.js"></script>
 <script src="app/services/constantService.js"></script>
 <script src="app/services/badgeService.js"></script>
+-->
 </body>
 </html>
