--- a/routing/public/index.html
+++ b/routing/public/index.html
@@ -12,6 +12,8 @@
 
 <div ng-view></div>
 
+<script src="/public/assets/js/bundle.js"></script>
+<!--
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-route.js"></script>
 <script src="app/app.js"></script>
@@ -22,5 +24,6 @@
 <script src="app/services/loggerService.js"></script>
 <script src="app/services/constantService.js"></script>
 <script src="app/services/badgeService.js"></script>
+-->
 </body>
 </html>
